--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,17 @@ button:focus {
   text-align: left;
   margin-bottom: 22px;
 }
+.offer__about--title a {
+  font-size: 16px;
+  line-height: 20px;
+  color: #8CB589;
+  text-decoration: underline;
+  margin-left: 39px;
+  font-weight: normal;
+}
+.offer__about--title a:hover {
+  color: #8CB589;
+}
 .offer__about--text {
   max-width: 478px;
   margin-bottom: 38px;
@@ -2224,6 +2235,90 @@ button:focus {
 }
 .map__title {
   margin-bottom: 50px;
+}
+
+.prices__info {
+  width: 100%;
+}
+.prices__table--item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: rgba(140, 181, 137, 0.08);
+  padding: 20px;
+}
+.prices__table--item.type-2 {
+  background: #ffffff;
+}
+.prices__table--title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 160%;
+  color: #333333;
+}
+.prices__table--desc {
+  font-size: 16px;
+  line-height: 160%;
+  color: #333333;
+  margin-top: 8px;
+}
+.prices__table--price {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 160%;
+  color: #000000;
+  text-align: right;
+}
+
+.accordion {
+  width: 100%;
+}
+.accordion-item {
+  margin-bottom: 32px;
+}
+.accordion-item:last-child {
+  margin-bottom: 0;
+}
+.accordion-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  border: 0;
+  background: #FFFFFF;
+  padding: 30px 40px;
+  text-align: left;
+  font-weight: bold;
+  font-size: 34px;
+  line-height: 160%;
+  color: #333333;
+  position: relative;
+  border-radius: 20px 20px 0 0;
+}
+.accordion-button.collapsed {
+  border-radius: 20px;
+}
+.accordion-button__icon {
+  margin-right: 25px;
+}
+.accordion-button:before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 18px;
+  right: 40px;
+  background: url("../images/svg/accordion-arrow.svg") no-repeat;
+}
+.accordion-body {
+  background: #ffffff;
+  padding: 0 40px 30px 100px;
+  border-radius: 0 0 20px 20px;
 }
 
 .footer {
